<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.chelinvest.notification.ui.fragments.subscr.SubscrViewModel" />
    </data>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/vParentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/fragment_subscr_scene">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/vBackButton"
                        style="@style/AppTheme.BackButtonImageView" />

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/subscr_title_text"
                        android:textAlignment="center"
                        android:textColor="?attr/labelTextColor"
                        android:textSize="@dimen/label_text_size" />

                    <ImageView
                        android:id="@+id/vAddButton"
                        style="@style/AppTheme.AddButtonImageView" />

                </LinearLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar">

                <TextView
                    android:id="@+id/subLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/subLabelBackgroundColor"
                    android:padding="4dp"
                    android:text="@string/subscr_subtitle_text"
                    android:textAlignment="center"
                    android:textColor="?attr/subLabelTextColor"
                    android:textSize="@dimen/branch_list_item_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/onlyActiveTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/only_active_subscr"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toStartOf="@+id/onlyActiveSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/subLabelTextView" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/onlyActiveSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical|end"
                    android:onCheckedChanged="@{(switch, bool) -> viewmodel.setActiveOnly(bool)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subLabelTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subscriptRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerLayout"
                tools:listitem="@layout/list_item_subscript" />

            <ProgressBar
                android:id="@+id/vProgressLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="?attr/colorPrimary"
                android:indeterminateTintMode="src_atop"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
