...
                android:layout_marginRight="16dp"
                android:text="@string/login_name_title"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/userEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/edit_text_text_size"
...
                    android:src="@drawable/ic_eye"
                    app:tint="@color/black"
                    tools:tint="@color/colorPrimary"
                    tools:alpha="1.0" />

                <EditText
                    android:id="@+id/passEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/edit_text_text_size"
...
                    android:background="@drawable/bg_modified_edit_text"
                    android:inputType="textPassword" />

            </RelativeLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@color/transparent"
                android:textColor="@color/colorPrimary"
...
