...
    <string name="subscr_subtitle_text">Уведомление о снижении лимита агента до предельного значения</string>
    <string name="edit_subscr_title_text">Редактирование подписки</string>
    <string name="edit_subscr_save_question">Сохранить изменения?</string>
    <string name="edit_subscr_continue_choice">Продолжить редактирование</string>
    <string name="address_title_text">Уведомления</string>
    <string name="login_again_text">вход</string>
    <string name="only_active_subscr">Только активные подписки</string>
    <string name="dialog_create_subscr_title">Создание подписки</string>
    <string name="choose_attr_value">Выберите значение атрибута \'%1$s\':</string>
    <string name="menu_limits">Лимиты</string>
    <string name="menu_branches">Уведомления</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ruble">₽</string>
    <string name="cancel">Отмена</string>
    <string name="edit_continue">Продолжить</string>
    <string name="delete_subscr_text">Удалить подписку?</string>
    <string name="change_active_subscr_text">Активировать подписку?</string>
    <string name="change_deactive_subscr_text">Деактивировать подписку?</string>
    <string name="empty_description_error">Описание подписки не может быть пустым!</string>
    <string name="create_subscr_text">Создать подписку?</string>
...
